--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-src/main/resources/*.csv
-src/main/resources/*.png
+src/main/resources
+src/main/com/staboss/coding/plot/
+
 .idea
-target
-*.iml
 .DS_Store
+
+*.iml
+target
